[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/UI/Fonts/FairfaxStationNF20.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/UI/Menu/Menu.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Menu" type="Panel"]
margin_left = 320.0
margin_top = 64.0
margin_right = 704.0
margin_bottom = 449.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VersionLabel" type="Label" parent="."]
margin_left = 576.0
margin_top = 352.0
margin_right = 704.0
margin_bottom = 416.0
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -64.5
margin_right = 96.0
margin_bottom = -23.5
grow_horizontal = 2
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfigurationButton" type="Button" parent="."]
margin_left = 96.0
margin_top = 184.0
margin_right = 288.0
margin_bottom = 216.0
custom_fonts/font = ExtResource( 1 )
text = "Configurations"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="."]
margin_left = 96.0
margin_top = 232.0
margin_right = 288.0
margin_bottom = 264.0
custom_fonts/font = ExtResource( 1 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreboardButton" type="Button" parent="."]
margin_left = 96.0
margin_top = 280.0
margin_right = 288.0
margin_bottom = 312.0
custom_fonts/font = ExtResource( 1 )
text = "Scoreboard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
margin_left = 96.0
margin_top = 328.0
margin_right = 288.0
margin_bottom = 360.0
custom_fonts/font = ExtResource( 1 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ConfigurationButton" to="." method="_on_ConfigurationButton_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="ScoreboardButton" to="." method="_on_ScoreboardButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
